name:                selenese
version:             0.1.0.0
synopsis:            Data structure for Selenium IDE's "Selenese" and a quick TagSoup parser for Selenese HTML files.
description:         Please see README.md
homepage:            http://github.com/githubuser/simple#readme
license:             BSD3
license-file:        LICENSE
author:              Beerend Lauwers
maintainer:          beerendlauwers@gmail.com
copyright:           2016 Beerend Lauwers
category:            Web, Browser, Testing, WebDriver, Selenium
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Test.WebDriver.Selenese
  build-depends:       base >= 4.7 && < 5
                      , tagsoup
                      , filepath
                      , MissingH
  default-language:    Haskell2010

test-suite simple-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , simple
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/simple
